fix :realtime bus tracking enabled
